Improve & style the band page for the users Style the rating with some nice stars

--- a/client/views/vote/admin/band_view.html
+++ b/client/views/vote/admin/band_view.html
@@ -163,7 +163,7 @@
                                             <audio src="{{ track.url }}" controls></audio>
                                         </div>
                                         <p class="list-group-item-text">
-                                            {{ track.trackname }}
+                                            {{ track.nice_trackname }}
                                         </p>
                                     </div>
                                 </div>
