--- a/client/src/scss/page/_band-detail.scss
+++ b/client/src/scss/page/_band-detail.scss
@@ -1,84 +1,245 @@
 .band-detail {
-    img {
-        max-width: 100%;
-    }
+  img {
+    max-width: 100%;
+  }
 
-    .header-image {
-        max-width: 200px;
-    }
+  .header-image {
+    max-width: 200px;
+  }
 
-    h3 {
-        width: 100%;
-    }
+  h3 {
+    width: 100%;
+  }
 }
 
+.voting-row {
+  text-align: center;
+  margin: 2rem 0;
+}
+
+
+.voting {
+
+  font-size: 2.75rem;
+
+  a {
+    text-decoration: none;
+    font-weight: bold;
+    padding: 0px 0px;
+    font-family: 'starfont';
+    color: #545A6A;
+    content: "\2729";
+    outline: 0;
+
+    &:before{
+      content: '\2729';
+    }
+    &.active{
+      color: #EFDB43;
+
+      &:before{
+        content: '\272e';
+      }
+    }
+  }
+
+}
 .detail-header {
-    overflow: hidden;
-    background-size: cover;
-    background-position: center top;
-    padding: 50px 2% 4%;
-    position: relative;
+  overflow: hidden;
+  background-size: cover;
+  background-position: center top;
+  padding: 50px 2% 4%;
+  position: relative;
 
-    @include breakpoint(m) {
-        padding-top: 100px;
+  @include breakpoint(m) {
+    padding-top: 100px;
+  }
+
+  &:before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1;
+  }
+
+  color: $bg-sec;
+}
+
+.band-info-row {
+  padding-top: 0;
+  margin-top: 0;
+  background: #5e5e5e;
+  color: #ffffff;
+  a {
+    color: #ffffff;
+  }
+
+  span {
+    font-size: 0.85em;
+    padding-top: 0px;
+    margin-top: 0px;
+  }
+
+  div {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
+  }
+}
+
+.band-description {
+  text-align: justify;
+  line-height: 1.3em;
+  padding: 25px 25px;
+  margin: 10px 0px 40px;
+  border-radius: 5px;
+  background-color: #D3D3D3;
+}
+
+div.comment-row {
+  padding: 10px;
+  border-bottom: 0.5px solid #D6D6D6;
+
+  .comment-author {
+    padding-left: 15px;
+  }
+  span {
+    color: #545A6A;
+    font-size: 0.75rem;
+  }
+
+  &:hover {
+    background-color: #D8D8D8;
+  }
+}
+
+form.comment {
+  margin-top: 2rem;
+
+  h3 {
+    text-align: right;
+  }
+  button {
+    padding: 5px;
+    color: #fff;
+    background-color: #545A6A;
+    vertical-align: bottom;
+    border: 0;
+
+  }
+
+  textarea {
+    border: 3px solid $bg-primary;
+    background-color: $bg-sec;
+    color: #000000;
+  }
+}
+
+.tracks-h3 {
+  margin-bottom: 0;
+  margin-right: 52px;
+  margin-left: 10px;
+
+  h3 {
+    margin-bottom: 0;
+    float: left;
+    width: 150px;
+  }
+
+  a {
+    background-color: #545A6A;
+    color: #fff;
+    text-decoration: none;
+    padding: 8px;
+    margin-top: 10px;
+    margin-left: 20px;
+    font-weight: normal;
+    float: right;
+  }
+}
+
+ul.tracks {
+  width: 100%;
+  margin: 1rem 1rem 3rem;
+
+  li {
+    width: 90%;
+    margin: 0px 10px;
+    border-bottom: 0.5px solid #D6D6D6;
+    color: #545A6A;
+
+    span {
+      font-size: 0.8rem;
+      padding-bottom: 2px;
+      padding-right: 5px;
     }
+  }
 
-    &:before {
-        content: ' ';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background-color: rgba(0,0,0,0.7);
-        z-index: 1;
-    }
 
-    color: $bg-sec;
+
+  li:nth-of-type(2n) {
+    background-color: #F7F7F7;
+  }
+  li:hover {
+    background-color: #D8D8D8;
+  }
+
+  li a {
+    color: #545A6A;
+    text-decoration: none;
+    font-weight: normal;
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 8px 20px;
+  }
 }
 
 .detail-content {
-    padding: 2%;
+  padding: 2%;
 }
 
 .header-image {
 
-    width: 50%;
+  width: 50%;
 
-    border-radius: 50%;
+  border-radius: 50%;
 
-    display: block;
-    margin: 0 auto 25px;
+  display: block;
+  margin: 0 auto 25px;
 
-    @include breakpoint(m) {
-        width: 25%;
-        max-width: 150px;
-        margin-right: 15px;
-        margin-bottom: 0;
-    }
+  @include breakpoint(m) {
+    width: 25%;
+    max-width: 150px;
+    margin-right: 15px;
+    margin-bottom: 0;
+  }
 }
 
 .header-breadcrumb {
-    a {
-        text-decoration: none;
-        font-size: $h3-font-size;
-        color: $bg-sec;
-    }
-    span {
-        display: block;
-        font-weight: 300;
-        font-size: $h2-font-size;
-        line-height: $h2-line-height;
-    }
+  a {
+    text-decoration: none;
+    font-size: $h3-font-size;
+    color: $bg-sec;
+  }
+  span {
+    display: block;
+    font-weight: 300;
+    font-size: $h2-font-size;
+    line-height: $h2-line-height;
+  }
 }
 
 .header-image,
 .header-breadcrumb {
-    position: relative;
-    z-index: 5;
+  position: relative;
+  z-index: 5;
 
-    @include breakpoint(m) {
-        display: inline-block;
-        vertical-align: bottom;
-    }
+  @include breakpoint(m) {
+    display: inline-block;
+    vertical-align: bottom;
+  }
 }
