Count the current amount of bands (would also be possible in some way without js, but because of the, a bit strange implementation of the filter mechanism this might be the easiest solution)

--- a/client/views/vote/admin/overview.html
+++ b/client/views/vote/admin/overview.html
@@ -22,7 +22,7 @@
                     <!-- Navigation Tabs -->
                     <ul class="nav nav-tabs" role="tablist">
                         <li role="presentation" class="active">
-                            <a href="#bands" aria-controls="bands" role="tab" data-toggle="tab">{{ bands|length }} Bands</a>
+                            <a href="#bands" aria-controls="bands" role="tab" data-toggle="tab" class="bandsAmount">{{ bands|length }} Bands</a>
                         </li>
                         <li role="presentation">
                             <a href="#users" aria-controls="users" role="tab" data-toggle="tab">{{ users|length }} Benutzer</a>
