Rework the band page a bit more Make the player look a bit nicer

--- a/client/src/scss/base/_variables-vote.scss
+++ b/client/src/scss/base/_variables-vote.scss
@@ -84,6 +84,7 @@ $h4-margin-bottom: 1 * $h4-line;
 $breakpoints: (
     "(max-width: 479px)" "xs",
     "(min-width: 480px)" "s",
+    "(max-width: 736px)" "sm",
     "(min-width: 737px)" "m",
     "(min-width: 1024px)" "l"
 );
