--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -33,14 +33,13 @@
             <div class="band-tile-content player-image">
                 <image {{ bind-attr src=current.band.thumbnail }} />
                 <div class="band-tile-desc">
-                    {{ current.band.name }} ( {{ current.band.ownVote }})
+                    {{ current.band.name }}
                 </div>
             </div>
             {{/link-to}}
-
-            <br> Vote
+            <br />
                 {{view "votecontrols" band=current.band }}
-            ( {{ current.band.ownVote }})
+            <br />
             {{else }}
             <div class="player-image"><i class="i-audio"></i></div>
 
@@ -125,12 +124,12 @@
                     <div>{{city}}, {{distance}} km</div>
                 </div>
 
-                <div class="col-xs-2">
+                <div class="col-xs-3 col-md-2">
                     <div><a {{bind-attr href=website }}>Webseite</a></div>
                 </div>
 
-                <div class="col-xs-2">
-                    <div>{{#if facebookUrl }}<a {{ bind-attr href=facebookUrl }}>facebook</a>{{else}}-{{/if }}</div>
+                <div class="col-md-2 col-xs-1">
+                    <div>{{#if facebookUrl }}<a {{ bind-attr href=facebookUrl }}><span class="md-hidden">fb</span><span class="xs-hidden">facebook</span></a>{{else}}-{{/if }}</div>
                 </div>
             </div>
 
@@ -138,13 +137,13 @@
         <div class="detail-content">
 
             <div class="row reverse">
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-5">
                     <div class="voting-row">
                         {{view "votecontrols" band=this }}
                     </div>
                 </div>
 
-                <div class="col-md-6 col-xs-12">
+                <div class="col-md-7 col-xs-12">
                     <h3 class="tracks-h3">
                         Tracks
                         <a href="#" {{ action "addAllTracks" }}" class="addAllTracks">Alle Tracks der Liste hinzufügen</a>
@@ -154,7 +153,7 @@
             </div>
 
             <div class="row">
-                <div class="col-xs-12 col-md-6">
+                <div class="col-xs-12 col-md-7">
 
                     <ul class="tracks">
                         {{#each track in tracks }}
@@ -171,13 +170,14 @@
                     {{#each comment in comments }}
                         <div class="row">
                             <div class="col-xs-11">
-                                <div class="row comment-row">
-                                    <div class="col-xs-2 comment-author">
-                                        {{ comment.author }}<br />
-                                        <span>{{ comment.timestamp }}</span>
-                                    </div>
-                                    <div class="col-xs-10">
+                                <div class="row reverse comment-row">
+                                    <div class="col-md-9 col-xs-12">
                                         {{ comment.message }}
+                                    </div>
+                                    <div class="col-xs-12 col-md-3 comment-author">
+                                        <div>{{ comment.author }}
+                                        <span>{{ comment.timestamp }}</span>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
