Give the youtube player correct sizing attrs

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -221,7 +221,7 @@
                 <div>
                     {{#if youtubeUrl }}
                     <!-- Feel free to use some JS hacks to avoid this iframe, Dennis -->
-                            <iframe id="ytplayer" type="text/html" width="100%" height="100%"
+                            <iframe id="ytplayer" type="text/html" width="500px" height="375px"
                                     {{ bind-attr src=youtubeUrl }}"
                             frameborder="0"/>
                     {{/if }}
