--- a/client/src/scss/page/_vote.scss
+++ b/client/src/scss/page/_vote.scss
@@ -28,7 +28,7 @@ footer {
 .sidebar-area {
     position: fixed;
     width: 100%;
-    height: 60px;
+    height: 65px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -43,6 +43,34 @@ footer {
         height: 100vh;
         padding: 3% 2%;
     }
+
+    .vote-control {
+        font-size: 34px;
+        text-align: center;
+        margin: 20px 5px;
+    }
+
+    @include breakpoint(sm) {
+      padding: 5px;
+
+      .vote-control {
+        float: right;
+        width: 38%;
+        font-size: 20px;
+        margin: 5px 0;
+      }
+
+      .player-controls-container {
+        float: left;
+        width: 62%;
+      }
+
+      .player-seek {
+        clear: both;
+      }
+    }
+
+
 }
 
 .content-area {
