don't link the header

--- a/client/views/vote_layout/header.html
+++ b/client/views/vote_layout/header.html
@@ -1,7 +1,7 @@
 <div class="color-bar"></div>
 <header>
     <div class="logo">
-        <span><a href="/vote">tunefish</a></span>
+        <span>tunefish</span>
     </div>
 
     {% if g.user %}
