Add delete functionality

--- a/client/views/vote/admin/band_view.html
+++ b/client/views/vote/admin/band_view.html
@@ -30,7 +30,7 @@
                         </button>
                         <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
                             <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Bearbeiten</a></li>
-                            <li role="presentation" class="disabled"><a role="menuitem" tabindex="-1" href="#">Löschen</a></li>
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="{{ url_for('vote.admin.bands.delete', band_id=band.id) }}" onclick="return confirm('Band &quot;{{ band.name }}&quot; wirklich löschen?')">Löschen</a></li>
                             {% if band.state == 1 %}
                                 <li role="presentation" class="divider"></li>
                                 <li role="presentation">
