this is not the band registration

--- a/client/views/vote/loginAndRegisterUser.html
+++ b/client/views/vote/loginAndRegisterUser.html
@@ -51,7 +51,7 @@
                             {{ renderDefault(registerForm.login, 'Login') }}
                             {{ renderDefault(registerForm.password, 'Passwort') }}
                             {{ renderDefault(registerForm.confirm, 'Passwort wiederholen') }}
-                            <input type="submit" value="Band registrieren">
+                            <input type="submit" value="Benutzer registrieren">
                         </form>
                     </div>
 
