ugly hotfix for displaying the bandgrid

--- a/client/src/scss/page/_band-grid.scss
+++ b/client/src/scss/page/_band-grid.scss
@@ -24,7 +24,8 @@
 }
 
 .band-tile {
-    display: none;
+    // TODO add me for funky animations
+    //display: none;
     text-align: left;
     padding: 2%;
     vertical-align: top;
