--- a/client/src/scss/page/_vote.scss
+++ b/client/src/scss/page/_vote.scss
@@ -28,7 +28,7 @@ footer {
 .sidebar-area {
     position: fixed;
     width: 100%;
-    height: 65px;
+    height: 70px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -67,6 +67,7 @@ footer {
 
       .player-seek {
         clear: both;
+        padding-top: 5px;
       }
     }
 
