Example for player queue ui

--- a/client/src/scss/page/_player.scss
+++ b/client/src/scss/page/_player.scss
@@ -5,7 +5,15 @@
 
     li.playing:before {
       content: ">"
+    }
 
+    .queue {
+      overflow-y: scroll;
+      height: 50%;
+    }
+
+  li:nth-child(2n) {
+    background-color: $bg-primary;
   }
 
 }
