[Fix] Problem with a static map that doesn't change

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -213,7 +213,7 @@
             <div class="col-md-8 col-md-offset-2">
 
                 <div>
-                    <img src="http://maps.googleapis.com/maps/api/staticmap?key=AIzaSyDRzrscCqKGd66mLS6jOayfUw9d4SICKOY&markers={{ unbound city }}&zoom=10&size=550x300&sensor=false"/>
+                    <img {{ bind-attr src=map }} />
                 </div>
 
                 <div>
