--- a/client/src/scss/page/_vote.scss
+++ b/client/src/scss/page/_vote.scss
@@ -82,3 +82,13 @@ footer {
         -webkit-overflow-scrolling: touch;
     }
 }
+
+#tunefish_loading {
+  margin-top: 200px;
+  text-align: center;
+  font-size: 40px;
+
+  img {
+    margin: 0 auto 40px;
+  }
+}
