--- a/client/views/vote/admin/user_list.html
+++ b/client/views/vote/admin/user_list.html
@@ -11,6 +11,8 @@
         <th>Status</th>
         {% if g.user.is_admin %}
             <th>Berechtigungen</th>
+            <th><a id="sortVotes" href="{{ build_sort_url('vote_count', reverse) }}">Votes</a></th>
+            <th><a id="sortVoteAverage" href="{{ build_sort_url('vote_average', reverse) }}">&#8960;</a></th>
         {% endif %}
     </tr>
     </thead>
@@ -34,6 +36,8 @@
                         </a>
                     {% endif %}
                 </td>
+                <td>{{ user.vote_count }}</td>
+                <td>{{ user.vote_average }}</td>
             {% endif %}
 
         </tr>
