--- a/client/src/scss/base/_typography.scss
+++ b/client/src/scss/base/_typography.scss
@@ -1,3 +1,34 @@
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../fonts/SourceSansPro-Light-webfont.woff2') format('woff2'),
+    url('../fonts/SourceSansPro-Light-webfont.woff') format('woff');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../fonts/SourceSansPro-Regular-webfont.woff2') format('woff2'),
+    url('../fonts/SourceSansPro-Regular-webfont.woff') format('woff');
+    font-weight: 500;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Source Sans Pro';
+    src: url('../fonts/SourceSansPro-Bold-webfont.woff2') format('woff2'),
+    url('../fonts/SourceSansPro-Bold-webfont.woff') format('woff');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'tunefish';
+    src: url('../fonts/tunefish.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
+
 h1 {
     font-size: $h1-font-size;
     line-height: $h1-line-height;
