removed own voting from bandgrid

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -94,7 +94,7 @@
             {{#if band.voted}}<i class="i-done band-voted"></i>{{/if}}
             <img class="band-tile-img" src="{{unbound band.thumbnail}}" alt="{{unbound band.name}}"/>
             <div class="band-tile-desc">
-                {{ band.name }} ({{ band.ownVote }})
+                {{ band.name }}
             </div>
         </div>
         {{/link-to}}
