Remove youtube video, map to the left

--- a/client/views/vote/app.html
+++ b/client/views/vote/app.html
@@ -214,20 +214,12 @@
             </div>
 
             <div class="row xs-hidden">
-                <div class="col-md-8 col-md-offset-2">
+                <div class="col-md-8">
 
                     <div>
                         <img {{ bind-attr src=map }} />
                     </div>
 
-                    <div>
-                        {{#if youtubeUrl }}
-                        <!-- Feel free to use some JS hacks to avoid this iframe, Dennis -->
-                                <iframe id="ytplayer" type="text/html" width="500px" height="375px"
-                                        {{ bind-attr src=youtubeUrl }}"
-                                frameborder="0"/>
-                        {{/if }}
-                    </div>
                 </div>
             </div>
         </div>
