--- a/client/views/vote/admin/band_list.html
+++ b/client/views/vote/admin/band_list.html
@@ -40,7 +40,7 @@
             <a id="sortCount" href="{{ build_sort_url('vote_count') }}">Voting</a>,
             <a id="sortAverage" href="{{ build_sort_url('vote_average') }}">&#8960;</a>
         </th>
-        <th><a id="sortVariance" href="{{ build_sort_url('vote_average') }}">&#8960;</a>Var.</th>
+        <th><a id="sortVariance" href="{{ build_sort_url('vote_average') }}">Var.</a></th>
         <th>Optionen</th>
     </tr>
     </thead>
